--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,12 @@ input[type="submit"] {
 #showpwd{
   font-size: 15px;
 }
+
+#home-container{
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
