--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,17 @@ input[type="submit"] {
   cursor: pointer;
 }
 
+button{
+  width: 300px;
+  height: 40px;
+  border-radius: 5px;
+  padding: 10px;
+  background-color: var(--buttons-color);
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
 #showpwd{
   font-size: 15px;
 }
@@ -61,4 +72,6 @@ input[type="submit"] {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  height: 80vh;
+  gap: 20px;
 }
