--- a/css/home.css
+++ b/css/home.css
@@ -1,26 +1,10 @@
-#leftdiv,
-#rightdiv {
-  width: 50vw;
-  height: 100vh;
+#home-container{
   display: flex;
-}
-
-#leftdiv {
-  justify-content: left;
-}
-
-#rightdiv {
-  background-color: white;
-  border-radius: 20px 0 0 20px;
-  justify-content: center;
-}
-
-#hey {
-  color: white;
-  font-size: 30px;
-  font-weight: 800;
-}
-
-#hey span {
-  color: white;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 80vh;
+  gap: 20px;
 }
