--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,4 @@
-#home-container{
+#home-container {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -7,4 +7,17 @@
   transform: translate(-50%, -50%);
   height: 80vh;
   gap: 20px;
+}
+
+button {
+  width: 70vw;
+  cursor: auto;
+}
+button a {
+  font-size: 17px;
+  font-weight: 500;
+}
+button a:hover {
+  color: yellow;
+  transition: 0.7;
 }
