--- a/css/home.css
+++ b/css/home.css
@@ -9,15 +9,20 @@
   gap: 20px;
 }
 
-button {
+a,
+button a {
+  color: white;
+}
+
+#engage-btn {
   width: 70vw;
   cursor: auto;
 }
-button a {
+#engage-btn a {
   font-size: 17px;
   font-weight: 500;
 }
-button a:hover {
+#engage-btn a:hover {
   color: yellow;
   transition: 0.7;
 }
